apps/k8s_resources/deploymentA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-a
  name: app-a
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-a
    spec:
      containers:
      - image: dejanualex/app_a:1.1
        name: app-a-58z95
        ports:
        - containerPort: 5000
        resources: {}
status: {}
