apps/k8s_resources/serviceA.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-a
  name: svc-a
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-a
status:
  loadBalancer: {}
