apps/k8s_resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: crypto.7caaafc8acf346f891ba.westeurope.aksapp.io
      http:
        paths:
          - path: /svca
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 5000
          - path: /svcb
            pathType: Prefix
            backend:
              service:
                name: svc-b
                port:
                  number: 8888
