apps/k8s_resources/svc_np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-svc-a-to-svc-b
spec:
  podSelector:
    matchLabels:
      app: svc-a
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: svc-b
